# speaker-diarization-toolkit

./: .gitignore  CURRENT_WORK.md  README.md  pyproject.toml  run_speaker_diarization_tests.sh  run_speaker_diarization_tests.sh.README.md  speaker-assign  speaker-assign.DEV_NOTES.md  speaker-assign.README.md  speaker-catalog  speaker-catalog.DEV_NOTES.md  speaker-catalog.README.md  speaker-llm  speaker-llm.DEV_NOTES.md  speaker-llm.README.md  speaker-process  speaker-process.DEV_NOTES.md  speaker-process.README.md  speaker-report  speaker-report.DEV_NOTES.md  speaker-report.README.md  speaker-review  speaker-review.DEV_NOTES.md  speaker-review.README.md  speaker_detection  speaker_detection.README.md  speaker_samples  speaker_samples.README.md  speaker_segments  speaker_segments.README.md  test_stt_assemblyai_speaker_mapper.py
docs/: SPEAKER-DIARIZATION.FUTURE_WORKS.md
docs/openai_stt/: api-reference.md  api-reference.meta.yaml  speech-to-text-guide.md  speech-to-text-guide.meta.yaml  whisper-models.md  whisper-models.meta.yaml
docs/speechmatics.com/: api-overview.md  api-overview.meta.yaml  authentication.md  authentication.meta.yaml  batch-api.md  batch-api.meta.yaml  formatting-features.md  formatting-features.meta.yaml  index.md  languages.md  languages.meta.yaml  (+10 more)
evals/: Dockerfile.test  TESTING.md
ramblings/: 2025-10-07--llm-assisted-speaker-detection-design.md  2026-01-13--speaker-identity-system.md
speaker_detection_backends/: __init__.py  audio_profiles.py  backends.yaml  base.py  migrations.py  schemas.py  speechmatics_backend.py  transcript.py
(+55 files in other folders)
