[project]
name = "speaker-diarization-toolkit"
version = "0.1.0"
description = "Comprehensive speaker diarization and identification toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
